Tue Aug 23 19:29:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/DeploymentManager/DeploymentManager.mpc:
          Add dummy_label to all projects, this don't build, this is
          the fast way to get the scoreboard green. Already one project
          had this in the file.

Mon Aug 22 10:59:18 2005  William Otte  <wotte@dre.vanderbilt.edu>

	* DAnCE/DeploymentManager/DeploymentManager.cidl
	* DAnCE/DeploymentManager/DeploymentManager.idl
	* DAnCE/DeploymentManager/DeploymentManager.mpc
	* DAnCE/DeploymentManager/DeploymentManager_Impl.cpp
	* DAnCE/DeploymentManager/DeploymentManager_Impl.h
	* DAnCE/DeploymentManager/DeploymentManager_exec_export.h
	* DAnCE/DeploymentManager/DeploymentManager_stub_export.h
	* DAnCE/DeploymentManager/DeploymentManager_svnt_export.h

	Preliminary skeleton for the DeploymentManager.

Fri Aug 19 07:56:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/Config_Handlers/Any_Handler.cpp:
        * DAnCE/Config_Handlers/DataType_Handler.cpp:
        * DAnCE/Old_Config_Handlers/DT_Handler.cpp:
        * DAnCE/ciao/ComponentsC.h:
        * ciao/ComponentsC.h:
          Updated for AnyTypeCode refactoring

Tue Aug 16 15:16:10 2005  Nanbor Wang  <nanbor@exothermic.txcorp.com>

	* docs/schema/CIAOServerResources.xsd: Changed to define most of
	  the RT policy details with "element"s instead of "attribute"s
	  since "attribute"s  can be optional.  Thanks to Will Otte for
	  pointing this out.

Tue Aug 16 09:46:45 2005  William Otte  <wotte@dre.vanderbilt.edu>

	* DAnCE/Config_Handlers/Config_Handlers.mpc

	Moved some changes in from the branch to correct errors from:
	Mon Aug 15 12:03:43 2005  William Otte  <wotte@dre.vanderbilt.edu>

Mon Aug 15 12:03:43 2005  William Otte  <wotte@dre.vanderbilt.edu>

	* DAnCE/Config_Handlers/ADD_Handler.cpp
	* DAnCE/Config_Handlers/ADD_Handler.h
	* DAnCE/Config_Handlers/CCD_Handler.cpp
	* DAnCE/Config_Handlers/CCD_Handler.h
	* DAnCE/Config_Handlers/CRDD_Handler.h